# mixed_binary_text

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: lib.h
src/: lib.cpp  main.cpp
test/: CMakeLists.txt  TestSimple.cpp
